# Spautofy

./: .gitignore  Cargo.toml  README.md
src/: actions.rs  authorize.rs  endpoints.rs  main.rs  models.rs  user_info.rs
src/actions/: playlist_actions.rs  top_track_playlist.rs
src/models/: album.rs  artist.rs  playlist.rs  track.rs
