[package]
name = "spautofy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.7", features = ["derive"] }
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
rocket = "0.5.0-rc.4"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
